--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -47,3 +47,21 @@ button:hover {
 p {
     text-align: center;
 }
+/* Estilos do Pop-up */
+.alert {
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.success {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.danger {
+    background-color: #f44336;
+    color: white;
+}
