--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bem-vindo ao Sistema de Cadastro e Login</h1>
+        <h1>Bem-vindo ao Sistema</h1>
         <p><a href="{{ url_for('cadastro') }}">Cadastrar-se</a></p>
         <p><a href="{{ url_for('login') }}">Login</a></p>
     </div>
